--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,12 @@ matrix:
   include:
     - env: IMAGE=maven:3-jdk-8
     - env: IMAGE=maven:3-jdk-11
+    - name: Linux ARM64
+      arch: arm64-graviton2
+      virt: lxd
+      group: edge
+      os: linux
+      dist: focal
     
 env:
   global:
@@ -29,6 +35,7 @@ env:
 services:
   - docker
 before_install:
+  - lscpu
   - docker pull $IMAGE
 script:
   - $DOCKERRUN $IMAGE mvn -T.75C clean verify -U -Dsurefire.useFile=false -Djavax.net.ssl.trustStorePassword=changeit -B -V
