--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ language: minimal
 matrix:
   fast_finish: true
   include:
-    - env: IMAGE=maven:3-jdk-8
-    - env: IMAGE=maven:3-jdk-11
+  #  - env: IMAGE=maven:3-jdk-8
+  #  - env: IMAGE=maven:3-jdk-11
     - name: Linux ARM64
       env: IMAGE=maven:3-jdk-11
       arch: arm64-graviton2
@@ -32,7 +32,7 @@ matrix:
     
 env:
   global:
-  - DOCKERRUN="docker run -it --rm -v $PWD:/src -v $HOME/.m2:/root/.m2 -v /var/run/docker.sock:/var/run/docker.sock -w /src"
+  - DOCKERRUN="docker run --rm -v $PWD:/src -v $HOME/.m2:/root/.m2 -v /var/run/docker.sock:/var/run/docker.sock -w /src"
 services:
   - docker
 before_install:
