--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ services:
   - docker
 before_install:
   - lscpu
+  - sudo apt-get -y install shellcheck
   - docker pull $IMAGE
 script:
   - $DOCKERRUN $IMAGE mvn -T.75C clean verify -U -Dsurefire.useFile=false -Djavax.net.ssl.trustStorePassword=changeit -B -V
